@@ -8,7 +8,10 @@
 <h2>$omfileForceChown</h2>
 <p><b>Type:</b> global configuration directive</p>
 <p><b>Parameter Values:</b> boolean (on/off, yes/no)</p>
-<p><b>Available since:</b> 4.7.0+, 5.3.0+</p>
+<p><b>Available:</b> 4.7.0+, 5.3.0-5.8.x, <b>NOT</b> available in 5.9.x or higher</p>
+<p><b>Note: this directive has been removed and is no longer available. The
+documentation is currently being retained for historical reaons.</b> Expect
+it to go away at some later stage as well.
 <p><b>Default:</b> off</p>
 <p><b>Description:</b></p>
 <p>Forces rsyslogd to change the ownership for output files that already exist. Please note
